# bg

./: .editorconfig  Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
src/: helpers.rs  ls.rs  main.rs  monitor.rs  set.rs  slideshow.rs  usage.rs
