[package]
name = "bg"
version = "1.16.0"
edition = "2024"

[dependencies]
rand = { version = "0.8", features = [ "std_rng" ] }

[dependencies.windows]
version = "0.61"
features = [
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_UI_Shell"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
